<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" >

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segmented2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="5dp">

        <RadioButton
            android:id="@+id/rbOpening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:text="@string/opening"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:textSize="18sp"
            android:checked="true"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/rbComing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:text="@string/coming_soon"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:textSize="18sp"
            style="@style/RadioButton" />

    </info.hoang8f.android.segmented.SegmentedGroup>

    <ListView
        android:id="@+id/auctionList"
        android:layout_below="@+id/segmented2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:padding="17dp"
        android:text="@string/no_open_auctions"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="gone" />

</RelativeLayout>